fix button overflow

--- a/src/component/Login/index.css
+++ b/src/component/Login/index.css
@@ -16,7 +16,7 @@
 }
 
 .btnFacebook { 
-    width: 18.8rem;
+    width: 100%;
     height: 2.75rem;  
     border-radius: 15px;
     color:white;
@@ -33,7 +33,7 @@
   
 .btnGoogle { 
     background: #FFF;
-    width: 18.8rem;
+    width: 100%;
     margin-top: 1.25rem;
     margin-bottom: 1rem;
     height: 2.75rem;
